--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -3,7 +3,9 @@
 //////////////////////////////////
 $c-text: #2e3d3a;
 
-$c-purple--light: #f4eeff;
+$c-hover: #21ebc2;
+
+$c-gray--light: #ebebeb;
 
 //////////////////////////////////
 // General
@@ -21,7 +23,11 @@ body {
 }
 
 main {
-  display: flex !important;
+  margin-top: 7rem !important;
+
+  @include break($bp-sm) {
+    margin-top: 15rem !important;
+  }
 }
 
 ul,
@@ -29,36 +35,35 @@ ol {
   list-style: none;
   margin: 0;
   padding: 0;
+
+  li {
+    margin: 0;
+    padding: 0;
+  }
 }
 
 a {
   color: $c-text !important;
+  text-decoration: none;
+  box-shadow: none;
 }
 
-//////////////////////////////////
-// Header
-//////////////////////////////////
-.c-global-header {
-  z-index: 2;
-  display: flex;
-  position: fixed;
+img,
+svg {
+  margin: 0;
   width: 100%;
-  max-width: 100rem;
-}
-
-.c-global-header__contact {
-  display: flex;
-}
-
-.c-global-header__contact__item {
-  padding: 0.5em 1em;
+  height: 100%;
 }
 
 //////////////////////////////////
 // Footer
 //////////////////////////////////
 footer {
-  z-index: 2;
-  position: fixed;
-  bottom: 0;
+  text-align: center;
+  margin-top: 10rem;
+  font-size: 0.85rem;
+
+  @include break($bp-sm) {
+    font-size: 1rem;
+  }
 }
