--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -5,18 +5,43 @@ h4,
 h5 {
   margin-top: 0;
   margin-bottom: 1rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
 }
 
-.f-title {
+.f-title--lg {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
+
+  @include break($bp-sm) {
+    font-size: 3rem;
+  }
+}
+
+.f-title--md {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 2.25rem;
 }
 
-.f-title--small {
+.f-title--sm--400 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1rem;
+
+  @include break($bp-sm) {
+    font-size: 1.3rem;
+  }
+}
+
+.f-title--sm {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
+
+  @include break($bp-sm) {
+    font-size: 1.5rem;
+  }
 }
 
 .f-subtitle {
