add favicon and mobile header modal

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -55,6 +55,11 @@ svg {
   height: 100%;
 }
 
+button {
+  border: none;
+  background: none;
+}
+
 //////////////////////////////////
 // Footer
 //////////////////////////////////
