--- a/src/styles/components/_globalHeader.scss
+++ b/src/styles/components/_globalHeader.scss
@@ -10,33 +10,49 @@
   right: 0;
   justify-content: space-between;
   align-items: center;
-  z-index: 1;
+  z-index: 99999;
 
-  padding-top: 1.4rem;
-  padding-bottom: 1.4rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 
-  @include break-max($bp-sm) {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
+  @include break($bp-sm) {
+    padding-top: 1.4rem;
+    padding-bottom: 1.4rem;
+  }
+
+  &.is-open {
+    .c-global-header__logo {
+      @include break-max($bp-sm) {
+        opacity: 0;
+      }
+    }
   }
 }
 
 .c-global-header__logo {
-  width: 4rem;
-  height: 4rem;
+  width: 3rem;
+  height: 3rem;
+
+  @include break($bp-sm) {
+    opacity: 0;
+  }
 }
 
 .c-global-header__contact {
   display: flex;
   align-items: center;
 
-  @include break-max($bp-sm) {
-    display: none;
+  .c-global-header & {
+    @include break-max($bp-sm) {
+      display: none;
+    }
   }
 }
 
 .c-global-header__contact__item {
-  margin-right: 1.5rem;
+  @include break($bp-sm) {
+    margin-right: 1.5rem;
+  }
 
   &__icon {
     display: flex;
@@ -69,6 +85,10 @@
   height: 30px;
   z-index: 999999;
 
+  @include break($bp-sm) {
+    display: none;
+  }
+
   &__line {
     position: absolute;
     width: 100%;
@@ -76,16 +96,18 @@
     background-color: $c-text;
     transition: transform 0.2s $cubic;
 
-    &:last-child {
+    &--2 {
       margin-top: 0.5rem;
     }
+  }
 
-    .modal-toggle--is-open & {
-      &:first-child {
+  &.is-open {
+    .modal-toggle__line {
+      &--1 {
         transform: rotate(-45deg);
       }
 
-      &:last-child {
+      &--2 {
         margin-top: 0;
         transform: rotate(45deg);
       }
@@ -94,6 +116,7 @@
 }
 
 .mobile-header-modal {
+  display: none;
   width: 100vw;
   height: 0;
   background-color: white;
@@ -101,8 +124,13 @@
   position: fixed;
   left: 0;
   top: 0;
+  overflow: hidden;
 
-  &--is-open {
+  // To Do: figure out why this won't work
+  transition: height 0.2s ease-in;
+
+  &.is-open {
+    display: block;
     height: 100vh;
   }
 
