--- a/src/styles/components/_globalHeader.scss
+++ b/src/styles/components/_globalHeader.scss
@@ -57,10 +57,16 @@
     }
   }
 
+  a {
+    display: block;
+  }
+
   &__icon {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 24px;
+    height: auto;
   }
 
   svg {
