--- a/src/styles/components/_globalHeader.scss
+++ b/src/styles/components/_globalHeader.scss
@@ -2,30 +2,42 @@
 // Header
 //////////////////////////////////
 .c-global-header {
-  background-color: white;
-  display: flex;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  justify-content: space-between;
-  align-items: center;
-  z-index: 99999;
-
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-
-  @include break($bp-sm) {
-    padding-top: 1.4rem;
-    padding-bottom: 1.4rem;
-  }
-
   &.is-open {
     .c-global-header__logo {
       @include break-max($bp-sm) {
         opacity: 0;
       }
     }
+  }
+}
+
+.c-global-header__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: transform 0.4s;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 99999;
+
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+
+  @include break($bp-sm) {
+    padding-top: 1.75rem;
+    padding-bottom: 1.75rem;
+  }
+
+  // reveal on scroll
+  .scroll-down & {
+    transform: translate3d(0, -100%, 0);
+  }
+
+  .scroll-up & {
+    transform: none;
   }
 }
 
@@ -124,7 +136,7 @@
   }
 }
 
-.mobile-header-modal {
+.c-global-header__inner--modal {
   display: none;
   width: 100vw;
   height: 0;
