some accessibility stuff

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -2,7 +2,7 @@
   width: 100%;
   max-width: 68rem;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem 1.75rem;
 
   @include break($bp-sm) {
     padding: 2rem 5rem;
