--- a/src/styles/components/_project.scss
+++ b/src/styles/components/_project.scss
@@ -26,7 +26,10 @@
       transition: height 0.2s $cubic;
     }
 
-    &:hover {
+    &:hover,
+    &:focus {
+      outline: none;
+
       &:after {
         height: calc(100% + 2px);
       }
