some design updates

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -7,6 +7,8 @@ $c-hover: #21ebc2;
 
 $c-gray--light: #ebebeb;
 
+$c-text--gray: #a1a1a1;
+
 //////////////////////////////////
 // General
 //////////////////////////////////
