--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -29,7 +29,7 @@
 .c-card__image {
   order: -1;
   overflow: hidden;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.25rem;
   display: flex;
 
   img {
@@ -45,13 +45,29 @@
 }
 
 .c-card__tags {
-  margin-bottom: 0.65rem;
+  margin-bottom: 0.35rem;
 }
 
 .c-card__tags-item {
   font-size: 0.75rem;
-  margin-right: 0.7rem;
-  padding: 0.3rem 0.75rem;
-  border-radius: 1.5rem;
-  background-color: $c-gray--light;
+  position: relative;
+  padding: 0 0.65rem;
+
+  &:first-child {
+    padding-left: 0;
+  }
+
+  &:not(:first-child) {
+    &:before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: -0.125rem;
+      transform: translateY(-50%);
+      width: 0.25rem;
+      height: 0.25rem;
+      background-color: $c-text;
+      border-radius: 2rem;
+    }
+  }
 }
