--- a/src/styles/components/_globalHeader.scss
+++ b/src/styles/components/_globalHeader.scss
@@ -75,10 +75,8 @@
 
   &__icon {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 24px;
-    height: auto;
+    width: 22px;
+    height: 22px;
   }
 
   svg {
